<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import
            alias="User"
            type="com.noa.iot.android.model.User" />

        <variable
            name="user"
            type="User" />

        <import
            alias="Handler"
            type="com.noa.iot.android.viewmodel.login.login.LoginViewModel.Handler" />

        <variable
            name="handler"
            type="Handler" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Email"
            android:text="@{user.email}" />

        <EditText
            android:id="@id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Password"
            android:text="@{user.password}" />

        <Button
            android:id="@id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:enabled="@{user.enable}"
            android:onClick="@{handler.onClick}"
            android:text="@string/SignIn"
            android:textAllCaps="false" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@id/resetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{handler.onClick}"
                android:text="@string/ResetPassword" />

            <TextView
                android:id="@id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="@{handler.onClick}"
                android:text="@string/SignUp" />

        </RelativeLayout>
    </LinearLayout>
</layout>
