<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textViewConfirmTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Confirm your account"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="A confirmation code was sent."
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Please enter the code below to confirm your account."
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/text_border_selector"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/activity_text_padding"
            android:paddingRight="@dimen/activity_text_padding" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/text_border_selector"
            android:hint="@string/VerCode"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/activity_text_padding"
            android:paddingRight="@dimen/activity_text_padding" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@id/cfgcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/ConfirmCode"
            android:textAllCaps="false" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:padding="9dp"
            android:text="@string/ResendCode" />
    </LinearLayout>

</layout>